# Scraper-for-Facebook

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  pyproject.toml
.claude/: harness-spec.md
.claude/skills/facebook/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-07-20-active-mode-expansion-plan.md  2026-07-20-recon-findings.md  IMPLEMENTATION-KICKOFF.md
docs/wiki/: Architecture.md  CLI-Reference.md  Chaining-Recipes.md  Configuration.md  Contributing.md  FAQ-and-Troubleshooting.md  Installation.md  Output-Schema.md  Python-API-Reference.md  Quick-Start.md  README.md  Security-and-Privacy.md
scripts/: check_fixtures_pii.py  record_fixture.py
src/agentic_facebook/: __init__.py  catalog.py  chrome.py  cli.py  comments.py  config.py  errors.py  exits.py  graphql.py  retrieve.py  scroll.py  session.py  tokens.py
src/scraper_for_facebook/: __init__.py  catalog.py  chrome.py  cli.py  config.py  errors.py  exits.py  graphql.py  model.py  parse.py  profiles.py  queries.py  redact.py  retrieve.py  scroll.py  search.py  session.py  tokens.py  truncation.py
tests/: conftest.py  test_catalog.py  test_comments.py  test_graphql.py  test_identifier.py  test_model.py  test_parse.py  test_public_api.py  test_redact.py  test_retrieve.py  test_search.py  test_session_detection.py  test_tokens.py  test_truncation.py
tests/fixtures/: basic_status_post.ndjson  comment_preview_and_universal_marker.ndjson  media_and_links.ndjson  pinned_decoy_and_missing_date.ndjson  shared_post.ndjson  split_defer_merge.ndjson  truncated_post.ndjson
tests/live/: test_active_live.py
wiki/: Configuration.md  FAQ-and-Troubleshooting.md  Installation.md  Quick-Start.md  Security-and-Privacy.md
(+1 files in other folders)
